--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppMvcConnectionString": "Data Source=localhost,1433; Initial Catalog=Management_Accommodation_Room_Project_Offical; User ID=SA;Password=Password123; TrustServerCertificate=True"
+  }
 }
