--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppMvcConnectionString": "Data Source=localhost,1433; Initial Catalog=Management_Accommodation_Room_Project_Offical; User ID=SA;Password=Password123; TrustServerCertificate=True"
+    "AppMvcConnectionString": "Server=.\\SQLEXPRESS;Database=Management_Accommodation_Room_Project_Offical;Trusted_Connection=True;Encrypt=False"
   }
 }
