--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppMvcConnectionString": "Server=.\\SQLEXPRESS;Database=Management_Accommodation_Room_Project_Offical;Trusted_Connection=True;Encrypt=False"
+    "AppMvcConnectionString": "User Id=postgres.umalckgvctlpwrplnojb;Password=Demo29082024_01;Server=aws-0-ap-southeast-1.pooler.supabase.com;Port=5432;Database=postgres;"
   }
 }
