fix: Room, Tenant, Contact, Payment and Assest-Equipment

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppMvcConnectionString": "User Id=postgres.umalckgvctlpwrplnojb;Password=Demo29082024_01;Server=aws-0-ap-southeast-1.pooler.supabase.com;Port=5432;Database=postgres;"
+    "AppMvcConnectionString": "User Id=postgres.imbfaeyswkneestptfkr;Password=Demo29082024_01;Server=aws-0-ap-southeast-1.pooler.supabase.com;Port=5432;Database=postgres;"
   }
 }
